# MCP-demo

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: claude-review.yaml
src/mcp_demo/: server.py
tests/: test_server.py
